bug fix - links in data table
fixed a bug where the links would turn invisible when you selected the table row in a data table.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,3 +61,7 @@ table.dataTable {
 th{
 	width: 100%;
 }
+
+.activeLabelButton {
+	color: default;
+}
